# alpenwind

./: .dockerignore  .editorconfig  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  riji.rhai
cinema/server/: Cargo.toml  build.rs
cinema/server/src/: api.rs  api_routes.rs  bg_task.rs  data.rs  db.rs  error.rs  lib.rs
cinema/server/src/api/: data.rs  mod.rs
cinema/server/src/db/: mod.rs
cinema/server/src/db/migrations/: cinema-create.sql
cinema/server/src/fs/: mod.rs  read.rs  route.rs  util.rs
cinema/server/src/tmdb/: mod.rs  tmdb_client.rs
cinema/ui/: package-lock.json  package.json  tsconfig.json  vite.config.js
cinema/ui/src/: App.svelte  Watch.svelte  app.svelte  main.js  watch.svelte
cinema/ui/src/lib/: api.js  api.ts  data.js  data.ts
cinema/ui/src/ui/: cover.svelte  seekbar.svelte  selectoverlay.svelte  video.js  video.ts
core/: Cargo.toml
core-lib/: Cargo.toml  README.md
core-lib/js/: package-lock.json  package.json  rollup.config.ts  tsconfig.json  vite.config.js
core-lib/js/src/: ContextMenu.ts  Core.ts  api.js  contextmenu.js  index.ts  lib.js  router.js  routing.ts  user.js  user.ts
core-lib/lib/: Cargo.toml
core-lib/lib/src/: chuchi.rs  client.rs  config.rs  ffi.rs  fire.rs  lib.rs  macros.rs  progress_channel.rs  server.rs  stream.rs  util.rs
core-lib/lib/src/users/: checked_user.rs  data.rs  db.rs  mod.rs  sessions.rs  timeout.rs  users.rs
core-lib/lib/src/utils/: db.rs
core-lib/ui/: package-lock.json  package.json  tsconfig.json
core-lib/ui/src/: AddBtn.svelte  BackBtn.svelte  BlueFormBtn.svelte  ContextMenu.svelte  FormBtn.svelte  add-btn.svelte  back-btn.svelte  blue-form-btn.svelte  close-btn.svelte  contextmenu.svelte  form-input.svelte  menu-btn.svelte  search.svelte
core/server/: Cargo.toml  build.rs
core/server/src/: cors.rs  index.rs  main.rs  tempfile.rs
core/server/src/api/: error.rs  mod.rs
core/server/src/apps/: api.rs  api_routes.rs  app_lib.rs  mod.rs  route.rs
core/server/src/users/: api.rs  api_routes.rs  db.rs  mod.rs
core/ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
core/ui/public/: manifest.json
core/ui/src/: App.svelte  app.css  app.svelte  main.js  main.ts
core/ui/src/api/: apps.js  apps.ts  users.js  users.ts
core/ui/src/lib/: App.ts  app.js  apps.js  apps.ts
core/ui/src/pages/: Apps.svelte  Login.svelte  apps.svelte  login.svelte
core/ui/src/settings/: Page.svelte  app.js  app.ts  page.svelte
pwvault/: README.md
pwvault/server/: Cargo.toml  build.rs
pwvault/server/src/: api.rs  api_routes.rs  data.rs  db.rs  error.rs  favicons.rs  lib.rs
pwvault/ui/: package-lock.json  package.json  vite.config.js
pwvault/ui/src/: App.svelte  app.svelte  main.js
pwvault/ui/src/lib/: api.js  api.ts  crypto.js
pwvault/ui/src/ui/: addoverlay.svelte  masterpwoverlay.svelte  password.svelte
