[package]
name = "cinema-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
core-lib = { version = "0.1", path = "../../core-lib/lib" }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
postgres = { package = "fire-postgres", version = "0.1", features = ["json"] }
fire-api = { package = "fire-http-api", version = "0.2.0", features = ["stream", "trace"] }
fire = { package = "fire-http", version = "0.3.0", features = ["fs", "trace"] }
tokio = { version = "1.0" }
lazy_static = "1.4.0"
regex = "1.7.0"
image = { version = "0.24" }

[build-dependencies]
core-build-lib = { version = "0.1", path = "../../core-lib/build" }