[package]
name = "core-lib"
version = "0.1.0"
edition = "2021"

[features]
client = []
server = []
i-am-core = []

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }
bytes = "1.0"
postgres = { package = "fire-postgres", version = "0.3.0-beta.6", features = [
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
crypto = { package = "fire-crypto", version = "0.4", features = [
    "b64",
    "serde",
] }
fire = { package = "fire-http", version = "0.5.0-beta.2" }
toml = "0.8"
hyper = { version = "1.0", features = ["client"] }
hyper-util = { version = "0.1", features = [
    "server",
    "client",
    "client-legacy",
    "tokio",
] }
pin-project-lite = "0.2"
tracing = "0.1"
tower-service = "0.3.2"

[dev-dependencies]
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing-test = "0.2.5"
futures = "0.3"
