[package]
name = "core-lib"
version = "0.1.0"
edition = "2021"

[features]
client = []
server = []
i-am-core = []

[dependencies]
chuchi = "0.1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros"] }
bytes = "1.0"
chuchi-postgres = { version = "0.1.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
crypto = { package = "chuchi-crypto", version = "0.1", features = [
    "b64",
    "serde",
] }
toml = "0.8"
hyper = { version = "1.0", features = ["client"] }
hyper-util = { version = "0.1", features = [
    "server",
    "client",
    "client-legacy",
    "tokio",
] }
pin-project-lite = "0.2"
tracing = "0.1"
tower-service = "0.3.2"

[dev-dependencies]
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing-test = "0.2.5"
futures = "0.3"
