[package]
name = "pwvault-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chuchi-core = { version = "0.1.1" }
core-lib = { version = "0.1", path = "../../core-lib/lib" }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chuchi-postgres = { version = "0.1", features = ["json"] }
chuchi = { version = "0.1.0", features = ["fs", "api"] }
tokio = { version = "1.0" }
reqwest = { version = "0.12" }

[build-dependencies]
core-build-lib = { version = "0.1", path = "../../core-lib/build" }
